--- a/package.json
+++ b/package.json
@@ -1,22 +1,13 @@
 {
-  "name": "threejs-study",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "study-threejs",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "dev": "vite"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/wangbinze/threejs-study.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/wangbinze/threejs-study/issues"
-  },
-  "homepage": "https://github.com/wangbinze/threejs-study#readme",
   "devDependencies": {
     "vite": "^5.0.8"
   },
